wordpress/network-policy-wordpress-allow-ingress-to-php-from-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-allow-ingress-to-php-from-nginx
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress
              tier: frontend
      ports:
        - protocol: TCP
          port: 9000
